// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transport-http should create the right options for: connect 1`] = `
Array [
  "https://graphit/connect/some-verb",
  Object {
    "body": "{\\"in\\":\\"the-in-id\\",\\"out\\":\\"the-out-id\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: create (waitForIndex) 1`] = `
Array [
  "https://graphit/new/some-type?waitForIndex=true",
  Object {
    "body": "{\\"some\\":\\"prop\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: create 1`] = `
Array [
  "https://graphit/new/some-type",
  Object {
    "body": "{\\"some\\":\\"prop\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: delete (waitForIndex) 1`] = `
Array [
  "https://graphit/some-id",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "DELETE",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: delete 1`] = `
Array [
  "https://graphit/some-id",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "DELETE",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: disconnect 1`] = `
Array [
  "https://graphit/the-out-id%24%24some-verb%24%24the-in-id",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "DELETE",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: get 1`] = `
Array [
  "https://graphit/some-id",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: gremlin 1`] = `
Array [
  "https://graphit/query/gremlin",
  Object {
    "body": "{\\"root\\":\\"root-id\\",\\"query\\":\\"pow()\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with from + to + offset + limit) 1`] = `
Array [
  "https://graphit/some-id/history?offset=100&limit=5&from=0&to=1550597976759",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with from + to) 1`] = `
Array [
  "https://graphit/some-id/history?from=0&to=1550597976759",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with from) 1`] = `
Array [
  "https://graphit/some-id/history?from=0",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with limit) 1`] = `
Array [
  "https://graphit/some-id/history?limit=500",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with offset + limit) 1`] = `
Array [
  "https://graphit/some-id/history?offset=100&limit=5",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with offset) 1`] = `
Array [
  "https://graphit/some-id/history?offset=10",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with to) 1`] = `
Array [
  "https://graphit/some-id/history?to=1550597976759",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history (with version) 1`] = `
Array [
  "https://graphit/some-id/history?limit=500&version=123",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: history 1`] = `
Array [
  "https://graphit/some-id/history",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: ids 1`] = `
Array [
  "https://graphit/query/ids",
  Object {
    "body": "{\\"query\\":\\"a,b,c\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: info 1`] = `
Array [
  "https://graphit/info",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer false",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (basic) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"*:*\\",\\"limit\\":50,\\"offset\\":0}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (count) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"*:*\\",\\"limit\\":50,\\"offset\\":0,\\"count\\":\\"true\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (fields) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"*:*\\",\\"limit\\":50,\\"offset\\":0,\\"fields\\":\\"/field1,/field2\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (limits) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"*:*\\",\\"limit\\":-1,\\"offset\\":1000}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (order) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"*:*\\",\\"limit\\":50,\\"offset\\":0,\\"order\\":\\"/field1 asc,/field2 desc\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: lucene (placeholders) 1`] = `
Array [
  "https://graphit/query/vertices",
  Object {
    "body": "{\\"query\\":\\"/foo:$bar\\",\\"limit\\":50,\\"offset\\":0,\\"bar\\":\\"123\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: me 1`] = `
Array [
  "https://graphit/me",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: replace (createIfNotExists) 1`] = `
Array [
  "https://graphit/some-id?createIfNotExists=true&ogit%2F_type=some-type",
  Object {
    "body": "{\\"/foo\\":\\"bar\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "PUT",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: replace (waitForIndex) 1`] = `
Array [
  "https://graphit/some-id?waitForIndex=true",
  Object {
    "body": "{\\"/foo\\":\\"bar\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "PUT",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: replace 1`] = `
Array [
  "https://graphit/some-id",
  Object {
    "body": "{\\"/foo\\":\\"bar\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "PUT",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: streamts (from only) 1`] = `
Array [
  "https://graphit/ts-id/values",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: streamts (to + from) 1`] = `
Array [
  "https://graphit/ts-id/values",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: streamts (to only) 1`] = `
Array [
  "https://graphit/ts-id/values",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: streamts 1`] = `
Array [
  "https://graphit/ts-id/values",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: update (waitForIndex) 1`] = `
Array [
  "https://graphit/some-id?waitForIndex=true",
  Object {
    "body": "{\\"/foo\\":\\"bar\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: update 1`] = `
Array [
  "https://graphit/some-id",
  Object {
    "body": "{\\"/foo\\":\\"bar\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should create the right options for: writets 1`] = `
Array [
  "https://graphit/ts-id/values",
  Object {
    "body": "{\\"items\\":[{\\"timestamp\\":1400000000000,\\"value\\":\\"value1\\"}]}",
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "Bearer <token>",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "mode": "cors",
  },
]
`;

exports[`transport-http should handle bad http responses appropriately 1`] = `
Object {
  "code": 502,
  "message": "[HTTP] Error: Invalid JSON in response from GraphIT",
}
`;

exports[`transport-http should handle bad http responses appropriately 2`] = `
Object {
  "code": 403,
  "message": "[HTTP] Error: forbidden",
}
`;

exports[`transport-http should handle bad http responses appropriately 3`] = `
Object {
  "code": 404,
  "message": "[HTTP] Error: not found",
}
`;
